hw0
UserMeal - equals and hashCode, edit toString();
UserMealWithExcess - remove all getter, equals and hashCode, edit toString();
UserMealsUtil - edit filteredByCycles, caloriesGroupByLocalDate